chore: streamline some settings in containers and add .env to gitignore

--- a/db/relational/Dockerfile
+++ b/db/relational/Dockerfile
@@ -1,4 +1,8 @@
-FROM mysql:8.0.19
-COPY create.sql /docker-entrypoint-initdb.d
-EXPOSE 3306
+FROM mariadb:10.4
 
+LABEL maintainer="gruppone.swe@gmail.com"
+
+# TODO not sure we should create the db tables here. what happens when we spin up a new container?
+COPY create.sql /docker-entrypoint-initdb.d
+
+EXPOSE 3306
