--- a/db/time-series/Dockerfile
+++ b/db/time-series/Dockerfile
@@ -1,3 +1,8 @@
-FROM influxdb:1.7.10
-COPY influxdb.sh /docker-entrypoint-initdb.d
+
+FROM influxdb:1.7
+
+LABEL maintainer="gruppone.swe@gmail.com"
+
+COPY create.sh /docker-entrypoint-initdb.d
+
 EXPOSE 8086
