build: prepare gitignore for gradle-based spring project
standardize service structure in docker-compose

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,11 @@
   "editor.tabSize": 2,
   "files.encoding": "utf8",
   "files.eol": "\n",
+  "files.exclude": {
+    "**/.classpath": true,
+    "**/.project": true,
+    "**/.settings": true
+  },
   "files.insertFinalNewline": true,
   "files.trimTrailingWhitespace": true,
   "git-graph.dialog.rebase.ignoreDate": false,
@@ -18,13 +23,20 @@
   "git.rebaseWhenSync": true,
   "git.useForcePushWithLease": true,
   "java.codeGeneration.generateComments": true,
+  "java.codeGeneration.useBlocks": true,
   "java.completion.guessMethodArguments": true,
+  "java.completion.maxResults": 25,
+  "java.configuration.updateBuildConfiguration": "automatic",
+  "java.format.settings.url": "https://raw.githubusercontent.com/google/styleguide/gh-pages/eclipse-java-google-style.xml",
   "java.implementationsCodeLens.enabled": true,
-  "java.import.gradle.enabled": false,
-  "java.import.gradle.wrapper.enabled": false,
+  "java.import.gradle.enabled": true,
+  "java.import.gradle.jvmArguments": "",
+  "java.import.gradle.wrapper.enabled": true,
+  "java.import.maven.enabled": false,
+  "java.jdt.ls.vmargs": "–Xlint:all –Werror",
   "java.referencesCodeLens.enabled": true,
   "java.saveActions.organizeImports": true,
-  "java.showBuildStatusOnStart.enabled": true,
+  "java.showBuildStatusOnStart.enabled": false,
   "prettier.singleQuote": false,
   "todo-tree.regex.regex": "((//|#|<!--|;|%|/\\*|^|--)\\s*($TAGS)|^\\s*- \\[ \\])",
   "yaml.format.enable": false
