--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,10 @@
 {
-  // settings shared by all of our repos
   "editor.detectIndentation": false,
   "editor.formatOnPaste": false,
   "editor.formatOnSave": false,
   "editor.formatOnType": false,
   "editor.insertSpaces": true,
+  "editor.tabSize": 2,
   "files.encoding": "utf8",
   "files.eol": "\n",
   "files.insertFinalNewline": true,
