--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,30 +1,49 @@
 {
-  // settings shared by all of our repos
   "editor.detectIndentation": false,
   "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
   "editor.formatOnType": true,
   "editor.insertSpaces": true,
+  "editor.tabSize": 2,
   "files.encoding": "utf8",
+  "files.eol": "\n",
+  "files.exclude": {
+    "**/.classpath": true,
+    "**/.project": true,
+    "**/.settings": true
+  },
+  "files.insertFinalNewline": true,
+  "files.trimTrailingWhitespace": true,
+  "git-graph.dialog.rebase.ignoreDate": false,
+  "git-graph.dialog.rebase.launchInteractiveRebase": false,
+  "git-graph.fetchAndPrune": true,
+  "git-graph.useMailmap": true,
   "git.autofetch": true,
   "git.autorefresh": true,
   "git.fetchOnPull": false,
   "git.rebaseWhenSync": true,
   "git.useForcePushWithLease": true,
-  "git-graph.dialog.rebase.ignoreDate": false,
-  "git-graph.dialog.rebase.launchInteractiveRebase": false,
-  "git-graph.fetchAndPrune": true,
-  "git-graph.useMailmap": true,
-  // -----------------------------------
+  "java.format.enabled": true,
+  "java.format.onType.enabled": true,
+  "java.format.comments.enabled": true,
+  "java.format.settings.url": "https://raw.githubusercontent.com/google/styleguide/gh-pages/eclipse-java-google-style.xml",
   "java.codeGeneration.generateComments": true,
+  "java.codeGeneration.useBlocks": true,
   "java.completion.guessMethodArguments": true,
+  "java.completion.maxResults": 25,
+  "java.configuration.updateBuildConfiguration": "automatic",
   "java.implementationsCodeLens.enabled": true,
-  "java.import.gradle.enabled": false,
-  "java.import.gradle.wrapper.enabled": false,
+  "java.import.gradle.enabled": true,
+  "java.import.gradle.jvmArguments": "",
+  "java.import.gradle.wrapper.enabled": true,
+  "java.import.maven.enabled": false,
   "java.referencesCodeLens.enabled": true,
   "java.saveActions.organizeImports": true,
-  "java.showBuildStatusOnStart.enabled": true,
-  "vsintellicode.java.completionsEnabled": true,
+  "java.showBuildStatusOnStart.enabled": false,
+  "prettier.singleQuote": false,
+  "todo-tree.regex.regex": "((//|#|<!--|;|%|/\\*|^|--)\\s*($TAGS)|^\\s*- \\[ \\])",
+  "yaml.schemaStore.enable": true,
+  "yaml.format.enable": false,
   // SPELLING
   "spellright.language": [
     "en",
