--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,27 +17,44 @@
   "git-graph.dialog.rebase.ignoreDate": false,
   "git-graph.dialog.rebase.launchInteractiveRebase": false,
   "git-graph.fetchAndPrune": true,
+  "git-graph.useMailmap": true,
   "git.autofetch": true,
   "git.autorefresh": true,
   "git.fetchOnPull": false,
   "git.rebaseWhenSync": true,
   "git.useForcePushWithLease": true,
+  "java.format.enabled": true,
+  "java.format.onType.enabled": true,
+  "java.format.comments.enabled": true,
+  // "java.format.settings.url": "https://raw.githubusercontent.com/google/styleguide/gh-pages/eclipse-java-google-style.xml",
   "java.codeGeneration.generateComments": true,
   "java.codeGeneration.useBlocks": true,
   "java.completion.guessMethodArguments": true,
   "java.completion.maxResults": 25,
   "java.configuration.updateBuildConfiguration": "automatic",
-  "java.format.settings.url": "https://raw.githubusercontent.com/google/styleguide/gh-pages/eclipse-java-google-style.xml",
   "java.implementationsCodeLens.enabled": true,
   "java.import.gradle.enabled": true,
   "java.import.gradle.jvmArguments": "",
   "java.import.gradle.wrapper.enabled": true,
   "java.import.maven.enabled": false,
-  "java.jdt.ls.vmargs": "–Xlint:all –Werror",
   "java.referencesCodeLens.enabled": true,
   "java.saveActions.organizeImports": true,
   "java.showBuildStatusOnStart.enabled": false,
   "prettier.singleQuote": false,
   "todo-tree.regex.regex": "((//|#|<!--|;|%|/\\*|^|--)\\s*($TAGS)|^\\s*- \\[ \\])",
-  "yaml.format.enable": false
+  "yaml.schemaStore.enable": true,
+  "yaml.format.enable": false,
+  // SPELLING
+  "spellright.language": [
+    "en",
+    "it"
+  ],
+  "spellright.documentTypes": [
+    "diagram",
+    "latex",
+    "markdown",
+    "plaintext",
+    "yaml"
+  ],
+  "xml.format.enabled": false,
 }
