--- a/.github/workflows/conventional-commits.yml
+++ b/.github/workflows/conventional-commits.yml
@@ -11,9 +11,18 @@ env:
 jobs:
   commitsar:
     name: Check all commits
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     steps:
       - uses: actions/checkout@v1
+
       - name: Run commitsar
         uses: docker://outillage/commitsar:0.11.1
+
+  semantic-pr:
+    name: Check PR title
+    runs-on: ubuntu-18.04
+
+    steps:
+      - name: semantic-pull-request
+        uses: amannn/action-semantic-pull-request@v1.2.0
