--- a/docker-compose.gui.yml
+++ b/docker-compose.gui.yml
@@ -1,16 +1,19 @@
 version: "3.7"
 
 services:
+  # FIXME not working
   rdb-gui:
     image: phpmyadmin/phpmyadmin:fpm-alpine
     depends_on:
       - rdb
 
     environment:
-      - PMA_HOST=rdb
+      PMA_ARBITRARY: 1
+      PMA_HOST: stalker-rdb
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:?err}
 
     ports:
-      - 8888:80
+      - 8080:80
 
   # FIXME not working
   tsdb-gui:
