--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ version: "3.7"
 
 # To start the graphical interfaces for the db services, use the following command in the root workspace folder:
 
-# docker-compose -f ./docker-compose.yml -f .docker-compose.db-gui.yml <compose-command>
+# docker-compose -f ./docker-compose.yml -f ./docker-compose.gui.yml <compose-command>
 
-# The password required to access our services are specified inside a .env file in the repository root directory. The env structure is documented in the .env.example file.
+# The password required to access our services are specified inside a .env file in the repository root directory. The env structure is documented in the .env.template file.
 
 # The "ports" mapping exposes the given ports to the HOST. The "expose" mapping only exposes given the ports to other services, which is what we want because only the server talks to the external world
 
@@ -18,17 +18,6 @@ version: "3.7"
 
 # To get an interactive shell inside a RUNNING container, use:
 # 'docker-compose exec <service-mapping-key> <shell-command>'
-#
-### EXAMPLES
-#
-# generic bash shell:
-# docker-compose exec <...> bash
-#
-# MariaDB shell:
-# docker-compose exec rdb mariadb
-#
-# InfluxDB shell:
-# docker-compose exec tsdb influx
 
 ########################################################################################################################
 
@@ -44,35 +33,42 @@ services:
 
   # TODO add health check
   rdb:
-    build:
-      context: ./db/relational
-      # # XXX we will use build: target: prod to specify the target stage with multi-stage dockerfiles
-      # target: name-of-stage
+    build: ./db/relational
+    # build:
+    #   context: ./db/relational
+    #   # XXX we will use target: prod to specify the target stage with multi-stage dockerfiles
+    #   target: name-of-stage
 
     restart: always
 
     environment:
-      # TODO add a regular user to be used by spring
+      # TODO add server-specific user credentials
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:?err}
 
     expose:
       - "3306"
 
     volumes:
-      - ./db/relational/mysqldb:/var/lib/mysql
+      - type: volume
+        source: rdb-data
+        target: /var/lib/mysql
+        volume:
+          nocopy: true
 
   # TODO add health check
   tsdb:
-    build:
-      context: ./db/time-series
-      # target: name-of-stage
+    build: ./db/time-series
+    # build:
+    #   context: ./db/time-series
+    #   # XXX we will use target: prod to specify the target stage with multi-stage dockerfiles
+    #   target: name-of-stage
 
     restart: always
 
     environment:
-      # TODO we should not create the db here
+      # TODO we probably should not create the db here
       INFLUXDB_DB: stalker-tsdb
-      # TODO add a regular user to be used by spring
+      # TODO add server-specific user credentials
       INFLUXDB_ADMIN_USER: root
       INFLUXDB_ADMIN_PASSWORD: ${INFLUXDB_ADMIN_PASSWORD:?err}
 
@@ -80,9 +76,10 @@ services:
       - "8086"
 
     volumes:
-      - .db/time-series/influxdb:/var/lib/influxdb/data
+      - type: volume
+        source: tsdb-data
+        target: :/var/lib/influxdb/data
 
-# TODO should use this on the left side of tsdb and rdb volumes syntax ([SOURCE:]TARGET[:MODE])
 volumes:
-  data-rdb:
-  data-tsdb:
+  rdb-data:
+  tsdb-data:
