--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,12 @@
 {
   "editor.detectIndentation": false,
-  "editor.formatOnPaste": true,
-  "editor.formatOnSave": true,
-  "editor.formatOnType": true,
+  "editor.formatOnPaste": false,
+  "editor.formatOnSave": false,
+  "editor.formatOnType": false,
   "editor.insertSpaces": true,
   "editor.tabSize": 2,
   "files.encoding": "utf8",
   "files.eol": "\n",
-  "files.exclude": {
-    "**/.classpath": true,
-    "**/.project": true,
-    "**/.settings": true
-  },
   "files.insertFinalNewline": true,
   "files.trimTrailingWhitespace": true,
   "git-graph.dialog.rebase.ignoreDate": false,
@@ -56,5 +51,5 @@
     "plaintext",
     "yaml"
   ],
-  "xml.format.enabled": false,
+  "xml.format.enabled": false
 }
