--- a/.github/workflows/conventional-commits.yml
+++ b/.github/workflows/conventional-commits.yml
@@ -24,5 +24,5 @@ jobs:
     runs-on: ubuntu-18.04
 
     steps:
-      - name: semantic-pull-request
+      - name: Run PR title checker
         uses: amannn/action-semantic-pull-request@v1.2.0
