--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,16 +4,17 @@
 spring.application.name=Stalker server
 # TODO add to bumpfiles or expand from gradle
 spring.application.version=0.1.0
+
 # ===============================
 # = DATA SOURCE
 # ===============================
 # TODO does env file expansion work here?
-# spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-# spring.datasource.url=jdbc:mariadb://192.168.1.81:3306/
-# spring.datasource.url=jdbc:mariadb://localhost:3306/
+# spring.datasource.driver-class-name=.....
+# TODO set datasource url
+# spring.datasource.url=????:????://localhost:3306/
 # spring.datasource.name=stalker-rdb
 # spring.datasource.username=root
-# spring.jpa.hibernate.ddl-auto=create-drop
+
 # ===============================
 # = OTHER
 # ===============================
