--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+  // TODO consider switching to M4 version in order to get async db dependency
   id 'org.springframework.boot' version '2.2.6.RELEASE'
   id 'io.spring.dependency-management' version '1.0.9.RELEASE'
   id 'java'
@@ -50,9 +51,6 @@ dependencies {
 
   // // influxdb 1.7 java client
   // implementation 'org.influxdb:influxdb-java:2.17'
-
-  // // mariadb connector
-  // implementation 'org.mariadb.jdbc:mariadb-java-client:2.1.2'
 
   // this enables some production-ready features (mainly health checks?).
   // ref: https://docs.spring.io/spring-boot/docs/current/reference/html/production-ready-features.html#production-ready-enabling
