--- a/db/relational/Dockerfile
+++ b/db/relational/Dockerfile
@@ -1,8 +1,8 @@
-FROM mariadb:10.4
+FROM mysql:8.0
 
 LABEL maintainer="gruppone.swe@gmail.com"
 
-COPY stalker-mariadb-config-file.cnf /etc/mysql/conf.d/
+COPY ./stalker-rdb-config-file.cnf /etc/mysql/conf.d/
 
 # TODO not sure we should create the db tables here. what happens when we spin up a new container?
 COPY create.sql /docker-entrypoint-initdb.d
