feat: initial configuration (#2)
* feat: add DockerFile and docker-compose for server

* chore: add some missing settings

* docs: add fields set schema for timeseries db

* fix: fix environment part in docker-compose

* feat: add influxdb script and influxdb configuration

README updated

* fix: fix name file .env.example in .env

* chore: streamline some settings in containers and add .env to gitignore

* build: prepare gitignore for gradle-based spring project

standardize service structure in docker-compose

* chore: add several improvements to sql file

Added statement for database creation, modified some fields in NOT NULL to improve indexing, added
AUTO_INCREMENT attribute to the columns that required it

* chore: update extension list and change commitizen adapter

* chore: change data types of date columns to datetime

change data types of date columns from timestamp to datetime according with objects data type in web
app

* chore: add release scripts and markdown lint workflow

* build: final touches to configuration

* feat: add project generated with spring initializr

generation link:
https://start.spring.io/#!type=gradle-project&language=java&platformVersion=2.2.6.RELEASE&packaging=jar&jvmVersion=11&groupId=tech.gruppone&artifactId=stalker-server&name=stalker-server&description=Backend%20for%20Stalker%20(SWE%20project%20%40%20CS%20course%20UniPD&packageName=tech.gruppone.stalker-server&dependencies=devtools,lombok,configuration-processor,webflux,data-rest,session,data-rest-hal,data-jpa,mail,restdocs,unboundid-ldap

* style: convert tabs to spaces

* build: remove excess dependencies and configure releaser

* chore: rename a bunch of files and commit .idea config

* docs: change influxdb schema and add comments

* refactor: standardize db table and column names

* chore: some changes to configuration

* chore: improve releaser scripts

* build(gradle): remove non-essential dependencies

* feat: im

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
   "editor.detectIndentation": false,
-  "editor.formatOnPaste": true,
-  "editor.formatOnSave": true,
-  "editor.formatOnType": true,
+  "editor.formatOnPaste": false,
+  "editor.formatOnSave": false,
+  "editor.formatOnType": false,
   "editor.insertSpaces": true,
   "editor.tabSize": 2,
   "files.encoding": "utf8",
@@ -12,17 +12,44 @@
   "git-graph.dialog.rebase.ignoreDate": false,
   "git-graph.dialog.rebase.launchInteractiveRebase": false,
   "git-graph.fetchAndPrune": true,
+  "git-graph.useMailmap": true,
   "git.autofetch": true,
   "git.autorefresh": true,
   "git.fetchOnPull": false,
   "git.rebaseWhenSync": true,
   "git.useForcePushWithLease": true,
+  "java.format.enabled": true,
+  "java.format.onType.enabled": true,
+  "java.format.comments.enabled": true,
+  // "java.format.settings.url": "https://raw.githubusercontent.com/google/styleguide/gh-pages/eclipse-java-google-style.xml",
   "java.codeGeneration.generateComments": true,
+  "java.codeGeneration.useBlocks": true,
   "java.completion.guessMethodArguments": true,
+  "java.completion.maxResults": 25,
+  "java.configuration.updateBuildConfiguration": "automatic",
   "java.implementationsCodeLens.enabled": true,
-  "java.import.gradle.enabled": false,
-  "java.import.gradle.wrapper.enabled": false,
+  "java.import.gradle.enabled": true,
+  "java.import.gradle.jvmArguments": "",
+  "java.import.gradle.wrapper.enabled": true,
+  "java.import.maven.enabled": false,
   "java.referencesCodeLens.enabled": true,
   "java.saveActions.organizeImports": true,
-  "java.showBuildStatusOnStart.enabled": true,
+  "java.showBuildStatusOnStart.enabled": false,
+  "prettier.singleQuote": false,
+  "todo-tree.regex.regex": "((//|#|<!--|;|%|/\\*|^|--)\\s*($TAGS)|^\\s*- \\[ \\])",
+  "yaml.schemaStore.enable": true,
+  "yaml.format.enable": false,
+  // SPELLING
+  "spellright.language": [
+    "en",
+    "it"
+  ],
+  "spellright.documentTypes": [
+    "diagram",
+    "latex",
+    "markdown",
+    "plaintext",
+    "yaml"
+  ],
+  "xml.format.enabled": false
 }
