feat: start cleaning up the poc endpoints

--- a/api/schemas/organization.yaml
+++ b/api/schemas/organization.yaml
@@ -2,8 +2,7 @@ type: object
 description: Organization's data
 properties:
   id:
-    type: integer
-    format: uint32
+    $ref: "genericId.yaml"
   name:
     type: string
   description:
