chore: add linter for openapi documents

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,10 +2,13 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "run spectral linter",
+      "label": "run spectral lint",
       "type": "shell",
       "command": "npx spectral lint ./api/**.yaml",
-      "problemMatcher": []
+      "problemMatcher": {
+        "base": "$eslint-stylish",
+        "source": "spectral"
+      }
     },
     {
       "label": "docker-compose up with GUIs",
